--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CIT Lab Vote</title>
+    <title>Planning Poker</title>
     <link rel="stylesheet" href="./public/css/style.css" />
 
     <script src="./public/scripts/main.js" defer></script>
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav class="navbar is-primary">
-        <p class="navbar-item"><strong>CIT Lab Task Voting Tool</strong></p>
+        <p class="navbar-item"><strong>Task Voting Tool</strong></p>
       </nav>
     </header>
     <section class="hero">
@@ -43,7 +43,6 @@
       <div class="columns is-centered">
         <div class="buttons">
           <button class="button is-primary" id="start">Start voting</button>
-          <button class="button is-link" id="invite">Invite others...</button>
         </div>
       </div>
     </section>
